# SporeDB

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.selfhosted.yml  docker-compose.yml  fly.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  render.yaml  sitemap.xml  sporedb.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
configuration/: index.html
contributing/: index.html
deploy/: index.html
deploy/aws/: index.html
deploy/digitalocean/: index.html
deploy/fly-io/: index.html
deploy/helm/sporedb/: Chart.yaml  values.yaml
deploy/railway/: index.html
deploy/render/: index.html
deployment/airgapped/: index.html
deployment/selfhosted/: index.html
docs/: configuration.md  contributing.md  index.md  quickstart.md
docs/deploy/: aws.md  digitalocean.md  fly-io.md  index.md  railway.md  render.md
docs/deployment/: airgapped.md  selfhosted.md
docs/reference/: index.md  sporedb.md
docs/validation/: IQ_protocol.md  OQ_protocol.md  PQ_protocol.md  traceability_matrix.md
examples/: demo_walkthrough.ipynb
quickstart/: index.html
reference/: index.html
reference/sporedb/: index.html
scripts/: generate-keys.sh  generate_env_docs.py  license_audit.py  verify_docker.sh  verify_install.py
search/: search_index.json
src/sporedb/: __init__.py  _types.py  client.py  cloud_client.py
tests/: conftest.py  test_coverage_gaps.py  test_deploy_guides.py  test_facade_analytics.py
tests/fixtures/: sample_elapsed.csv  sample_telemetry.csv
tests/test_analytics/: conftest.py  test_alignment.py  test_bocpd.py  test_detector.py  test_golden_batch.py  test_metrics.py  test_models.py  test_models_extended.py  test_pat.py  test_phase_store.py  test_preprocessing.py  test_preprocessing_coverage.py
tests/test_cli/: conftest.py  test_batch_commands.py  test_cli_coverage.py  test_data_commands.py  test_demo.py  test_pull.py  test_query_config_commands.py
tests/test_cloud/: __init__.py  conftest.py  test_app.py  test_auth.py  test_auth_deps.py  test_batches_api.py  test_cloud_audit_integration.py  test_cloud_audit_service.py  test_cloud_client.py  test_cloud_routes_phase12.py  test_config_docs.py  test_csrf.py  test_dashboard.py  test_db_models.py  test_figures.py  test_query_route.py  test_s3_storage.py  test_session_factory.py  test_tenant_isolation.py  test_token_revocation.py  test_vendor_neutrality.py
tests/test_compliance/: conftest.py  test_audit_trail.py  test_esignature.py  test_merkle.py  test_merkle_rfc6962.py  test_rbac.py  test_validator.py
tests/test_connectors/: test_base.py  test_config.py  test_influxdb.py  test_integration.py  test_labvantage.py  test_osisoft_pi.py  test_scinote.py
tests/test_export/: test_export.py
tests/test_ingestion/: conftest.py  test_column_mapper.py  test_csv_import.py  test_excel_import.py  test_timestamp.py  test_units.py
tests/test_models/: test_assay.py  test_batch.py  test_lineage.py  test_models_coverage.py  test_timeseries.py
tests/test_query/: conftest.py  test_compiler_security.py  test_dsl_compiler.py  test_dsl_parser.py
tests/test_sdk/: test_client.py  test_packaging.py
tests/test_storage/: test_batch_store.py  test_lineage_store.py  test_locking.py  test_query_filters.py  test_ts_store.py
tests/test_viz/: conftest.py  test_foundation.py  test_golden.py  test_inspector.py  test_overlay.py  test_viz_init.py
validation/IQ_protocol/: index.html
validation/OQ_protocol/: index.html
validation/PQ_protocol/: index.html
validation/traceability_matrix/: index.html
(+143 files in other folders)
