[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sporedb"
version = "0.1.0"
description = "Bioprocess-native time-series database"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Rishikesh Ranjan"}]
keywords = ["bioprocess", "fermentation", "time-series", "database", "bioreactor", "phase-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.5.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.0",
    "pandas>=2.2.0",
    "uncertainties>=3.2.0",
    "uuid-utils>=0.14.0",
    "openpyxl>=3.1.5",
    "thefuzz[speedup]>=0.22",
    "charset-normalizer>=3.4",
    "python-dateutil>=2.9",
    "cryptography>=46.0.0",
    "PyJWT[crypto]>=2.12.0",
    "argon2-cffi>=23.1.0",
    "ruptures>=1.1.9",
    "scipy>=1.12",
    "lark>=1.3.1",
    "fastdtw>=0.3.4",
    "click>=8.1.0",
    "rich>=13.0.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "aiosqlite>=0.20.0",
    "pytest-cov>=5.0",
]
viz = [
    "plotly>=6.7.0",
    "anywidget>=0.9.0",
    "ipywidgets>=8.1.0",
]
cloud = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "boto3>=1.42.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.9.0",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
]
connectors = [
    "influxdb-client>=1.50.0",
    "influxdb>=5.3.0",
    "pyyaml>=6.0",
    "authlib>=1.0",
    "httpx>=0.28.0",
]
osisoft = [
    "pi-web-sdk>=0.1.34",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=10.0",
]
all = [
    "sporedb[cloud]",
    "sporedb[viz]",
    "sporedb[connectors]",
    "sporedb[osisoft]",
    "sporedb[dev]",
    "sporedb[docs]",
]

[project.scripts]
sporedb = "sporedb.cli:cli"

[project.urls]
Homepage = "https://github.com/spore-db/SporeDB"
Repository = "https://github.com/spore-db/SporeDB"
Documentation = "https://spore-db.github.io/SporeDB/"
Issues = "https://github.com/spore-db/SporeDB/issues"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "plotly",
    "plotly.*",
    "ipywidgets",
    "ipywidgets.*",
    "anywidget",
    "anywidget.*",
    "ruptures",
    "ruptures.*",
    "fastdtw",
    "fastdtw.*",
    "thefuzz",
    "thefuzz.*",
    "uncertainties",
    "uncertainties.*",
    "scipy",
    "scipy.*",
    "pyarrow.parquet",
    "influxdb_client",
    "influxdb_client.*",
    "influxdb",
    "influxdb.*",
    "pi_web_sdk",
    "pi_web_sdk.*",
    "authlib",
    "authlib.*",
    "httpx",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q --tb=short"

[tool.hatch.build.targets.sdist]
include = ["src/sporedb", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/sporedb"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"
